fix: Fix bottom safe area on iPhone

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,8 @@
 
 @layer base {
     :root {
+        --safe-area-inset-top: env(safe-area-inset-top);
+        --safe-area-inset-bottom: env(safe-area-inset-bottom);
         --background: 0 0% 100%;
         --foreground: 224 71.4% 4.1%;
         --card: 0 0% 100%;
@@ -67,6 +69,8 @@
 
     body {
         @apply bg-background text-foreground;
+        height: calc(100vh - var(--safe-area-inset-top) - var(--safe-area-inset-bottom));
+
     }
 }
 
